# lintestor

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Cross.toml  Dockerfile  LICENSE  README.md  README_en.md  USAGE.md  USAGE_en.md  config.toml  reports.json  setup_fedora.sh  summary.md  test.txt  test_file.txt
.github/workflows/: bianbu_test.yml  ci.yml  clippy.yml  debian_test.yml  docs.yml  fedora_test.yml  format.yml  lintestor_test.yml  publish.yml  release.yml  unit_test.yml
bianbu/: config.toml
bianbu/apache/: metadata.sh  report.json
bianbu/clang/: report.json
bianbu/cmake/: metadata.sh  report.json
bianbu/docker/: report.json
bianbu/erlang/: report.json
bianbu/example/: report.json
bianbu/gcc/: report.json  test.sh
bianbu/gdb/: report.json
bianbu/golang/: report.json  test.sh
bianbu/haproxy/: report.json
bianbu/libmemcached/: report.json
bianbu/lighttpd/: report.json
bianbu/llvm/: metadata.sh  report.json
bianbu/mariadb/: report.json
bianbu/nginx/: report.json
bianbu/nodejs/: report.json
bianbu/numpy/: report.json
bianbu/ocaml/: metadata.sh  report.json
bianbu/openjdk/: report.json
bianbu/openssl/: report.json
bianbu/perl/: report.json
bianbu/postgresql/: report.json  test.sh
bianbu/python/: report.json  test.sh
bianbu/redis/: report.json
bianbu/ruby/: report.json
bianbu/runc/: report.json
bianbu/rust/: report.json
bianbu/scipy/: metadata.sh  report.json
bianbu/sqlite/: report.json
bianbu/squid/: metadata.sh  report.json
bianbu/varnish/: report.json
bianbu/zookeeper/: report.json  test.sh
debian/: config.toml  prerequisite.sh  start_ssh.sh  stop_qemu.sh  stop_ssh.sh
debian/apache/: report.json  test.sh
debian/clang/: report.json  test.sh
debian/cmake/: report.json  test.sh
debian/docker/: report.json  test.sh
debian/erlang/: report.json  test.sh
debian/example/: report.json  test.sh
debian/gcc/: Makefile  functions.c  functions.h  main.c  report.json  report.toml  run_tests.sh  test.sh
debian/gdb/: report.json  test.sh
debian/golang/: report.json  test.sh
debian/haproxy/: report.json  test.sh
debian/libmemcached/: test.sh  (+1 more)
fedora/: boot.sh  config.toml  init.sh  prerequisite.sh  start_qemu.sh  start_ssh.sh  stop_qemu.sh  stop_ssh.sh
openkylin/: config.toml  start_qemu.sh
reports/: basic_config.toml.report.md  basictest_local.report.md  comprehensive_config.toml.report.md  comprehensivetest_local.report.md  dependencytest_local.report.md  hello-world_local.report.md  local-target_local.report.md  readme_k1.toml.report.md  readme_spacemit_k1_m1_(x60).report.md  summary.test.md.report.md  variabletest_local.report.md
src/: aggregator.rs  config.rs  main.rs  markdown_report.rs  pool.rs  qemu_manager.rs  runner_manager.rs  scheduler.rs  test_executor.rs  test_runner.rs  test_script_manager.rs  test_template_manager.rs  testenv_manager.rs  testscript_manager.rs  utils.rs
tests/: tests.rs
(+251 files in other folders)
