[package]
name = "lintestor"
version = "0.1.6"
edition = "2021"
description = "Yet another Linux package tester"
license = "MIT"
repository = "https://github.com/255doesnotexist/lintestor"

[dependencies]
clap = "4.5.30"
serde = { version = "1.0.219", features = ["derive"] }
serde_derive = "1.0.204"
serde_json = "1.0.139"
serde_yaml = "0.9.34"
ssh2 = "0.9.5"
openssl = { version = "0.10.71", features = ["vendored"] }
toml = "0.8.20"
env_logger = "0.11.6"
log = "0.4.25"
chrono = { version = "0.4.39", features = ["serde"] }
dirs = "6.0.0"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
base64 = "0.22.1"
anyhow = "1.0.97"
async-trait = "0.1.86"
dialoguer = "0.11.0"
petgraph = "0.6.4"
regex = "1.10.4"
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2.0.16"
tempfile = "3.8"
mockall = "0.12"
mockall_double = "0.3.1"

[profile.release]
strip = true 
lto = true
codegen-units = 1
