[package]
name = "lintestor"
version = "0.2.0-rc.1"
edition = "2024"
description = "Yet another Linux package tester"
license = "MIT"
repository = "https://github.com/255doesnotexist/lintestor"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_derive = "1.0.219"
serde_yaml = "0.9.34-deprecated"
ssh2 = "0.9.5"
toml = "0.8.23"
env_logger = "0.11.8"
log = "0.4.27"
chrono = { version = "0.4.41", features = ["serde"] }
anyhow = "1.0.98"
regex = "1.11.1"
humantime-serde = "1.1.1"
mio-serial = "5.0.6"
test-log = "0.2.17"
openssl = { version = "0.10.73", features = ["vendored"] }

[dev-dependencies]
assert_cmd = "2.0.17"
tempfile = "3.20"
mockall = "0.12"
mockall_double = "0.3.1"

[profile.release]
strip = true 
lto = true
codegen-units = 1
